# reservas_online

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
frontend/: Dockerfile  entrypoint.sh
reservas/: db.sqlite3
reservas/api/: serializers.py  urls.py  views.py
reservas/app/: admin.py  forms.py  logging.py  models.py  script.py  urls.py  views.py
reservas/app/templates/: base.html  footer.html  sidebar.html
reservas/app/templates/app/: reservation_form.html  reservation_list.html
reservas/members/: admin.py  models.py
reservas/reservas/: db.py  settings.py  urls.py
reservas/reservas/fixtures/: PaymentsType.json  ReservationOrigin.json  ReservationStatus.json
reservas/reservas/fixtures/Data/: Commercial.json  Payments.json  Property.json  Reservation.json
